# uk-pol-speech-classifier

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  setup_local_folder.py
notebooks/: Confusion_Matrix.ipynb  JR_docker_debug.ipynb  JR_model-fine-tuning.ipynb  JR_model_transformer.ipynb  RB_KNN.ipynb  RB_logistic_reg.ipynb  RB_prelim_EDA_from_converted_CSVs.ipynb  SZIE_gru_model.ipynb  SZIE_prelim_EDA_from_converted_CSVs.ipynb  SZIE_preprocessing_debug.ipynb  SZIE_preprocessing_filtered_by_year.ipynb  SZIE_preprocessing_tfidf.ipynb  THL_Docker.ipynb  THL_model_lstm.ipynb  THL_model_svm-2.ipynb  THL_model_svm.ipynb  THL_prelim_EDA_from_converted_CSVs.ipynb  Untitled.ipynb  sentiment-analysis-with-word2vec.ipynb
polclassifier/: params.py  utils.py
polclassifier/api/: fast.py
polclassifier/interface/: main.py  test.py
polclassifier/ml_logic/: model_svm.ipynb  models.py  preprocessing.py  registry.py
training_outputs/text_plot/: latest_plot.html
